--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "webpack serve",
     "watch": "webpack --watch",
-    "build": "webpack --env mode=production",
-    "build-dev": "webpack --env mode=development"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,7 +25,9 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
