--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.6",
