--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --open",
     "watch": "webpack --watch",
     "build": "webpack"
   },
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "html-loader": "^2.1.2",
