--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.53.0",
